--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "private",
   "dependencies": {
-    "angular-material": "^1.0.7"
+    "material-design-lite": "^1.1.3"
   },
   "devDependencies": {},
   "private": true
