--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-typescript": "^2.13.0",
     "gulp-uglify": "^1.5.3",
     "gulp-usemin": "^0.3.22",
+    "merge2": "^1.0.2",
     "node-sass": "^3.6.0",
     "run-sequence": "^1.1.5"
   },
