--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-filter": "^4.0.0",
     "gulp-htmlmin": "^1.3.0",
+    "gulp-if": "^2.0.1",
     "gulp-main-bower-files": "^1.4.0",
     "gulp-sass": "^2.3.1",
     "gulp-server-livereload": "^1.7.4",
