--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "private",
   "dependencies": {
     "material-design-lite": "^1.1.3",
-    "angular-route": "^1.5.5",
+    "angular-route": "^1.5.5"
   },
   "devDependencies": {},
   "private": true
