--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,9 @@
   "name": "private",
   "dependencies": {
     "material-design-lite": "^1.1.3",
-    "angular-route": "^1.5.5"
+    "angular-route": "^1.5.5",
+    "angular-local-storage": "^0.2.7",
+    "angular-ui-router": "^0.3.0"
   },
   "devDependencies": {},
   "private": true
