--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
     "material-design-lite": "^1.1.3",
     "angular-route": "^1.5.5",
     "angular-local-storage": "^0.2.7",
-    "angular-ui-router": "^0.3.0"
+    "angular-ui-router": "^0.3.0",
+    "bootstrap-sass": "bootstrap-sass-official#^3.3.6"
   },
   "devDependencies": {},
   "private": true
