--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-filter": "^4.0.0",
+    "gulp-flatten": "^0.2.0",
     "gulp-htmlmin": "^1.3.0",
     "gulp-if": "^2.0.1",
     "gulp-main-bower-files": "^1.4.0",
